feat: Centralize Cache configuration in Meeds package and Add newly banned dependencies - Meeds-io/meeds#2537 (#2561)
This change will centralize the Cache configuration into Meeds package
to ease its maintainability and evolutivity. In fact, this will allow to
override the Meeds caches configurations by one single file override.
In addition, this change will delete a useless artifact `exo-plf-tools`.